# file_upload_proxy

./: .gitignore  Cargo.toml  Docker-compose.yml  Dockerfile  Makefile  configs.tar.gz.asc  settings.tar.gz.asc
.github/workflows/: deploy_on_server.yml  docker_build_and_publish.yml
configs/: .gitignore
configs/app_config/: prod.yaml  test.yaml
configs/deploy_test/: localhost.yaml  prod.yaml
configs/docker_compose/prod_full/: Docker-compose.yml  README.md
configs/docker_compose/prod_simple/: Docker-compose.yml
configs/docker_compose/test/: Docker-compose.yml  README.md
configs/google_service_account/: prod.json  prod_new.json  prod_old.json  test.json
deploy_on_server/: Docker-compose.yml
docker_compose/prod_full/: Docker-compose.yml
docker_compose/prod_simple/: Docker-compose.yml
docker_compose_testing/: README.md
docker_compose_testing/monitoring_configs/alertmanager/: alertmanager.yml
env/: prod_google_service_account.json.asc  prod_test_settings.env.asc  test_google_service_account.json.asc
prod_deploy_test/: Cargo.toml
prod_deploy_test/src/: app_arguments.rs  main.rs
src/: __auth_token_provider_with_preloading.rs  app_arguments.rs  app_config.rs  auth_token_provider.rs  error.rs  handlers.rs  helpers.rs  main.rs  project.rs  prometheus.rs  types.rs
src/handlers/: file_upload.rs  mod.rs  prometheus_metrics.rs  router.rs
src/oauth2/: get_token.rs  service_account.rs
src/project/: google.rs  mod.rs  proj.rs  slack.rs
test_app/: Cargo.toml
test_app/src/: app_arguments.rs  app_config.rs  helpers.rs  main.rs
tests/: remote_deployment_tests.rs
(+11 files in other folders)
