[package]
name = "file_upload_proxy"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tokio-console = ["console-subscriber", "tokio/tracing"]

[dependencies]
eyre = "0.6"
color-eyre = "0.5"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-error = "0.2"
structopt = "0.3"
tokio = {version = "1.13", features = ["full", "tracing"]}
console-subscriber = {version = "0.1", optional = true}     # Специальный слой для tracing для возможности отладки через tokio-console
hyper = {version = "0.14", features = ["full"]}
hyper-rustls = "0.22"
futures = "0.3"
uuid = {version = "0.8", features = ["v4"]}
chrono = "0.4"
mime = "0.3"
rsa = "0.5"
sha2 = "0.9"
urlencoding = "2.1"
base64 = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
async-compression = {version = "0.3", features = ["tokio", "gzip"]}
tokio-util = {version = "0.6", features = ["io"]}
serde_qs = "0.8"
prometheus = "0.13"
lazy_static = "1.4"
# scopeguard = "1.1"
# backoff = {version = "0.3", default-features = false, features = ["tokio"]}
# pin-project = "1.0.8"

# !!! Утилита для проверки будет отдельно, так как ломается сборка на GitHub
# Правильнее было бы отдельную папку для текущего приложения
# Но для маленькой утилиты тестов вполне подойдет
# [workspace]
# members = [".", "prod_deploy_test"]